--- a/webapp/src/app/layout/layout.component.html
+++ b/webapp/src/app/layout/layout.component.html
@@ -1,19 +1,30 @@
 <as-split direction="horizontal" gutterSize="2">
-  <as-split-area size="4">
-    <as-split direction="vertical">
-      <as-split-area>
-        <p>
-          <button mat-mini-fab color="primary" aria-label="Example icon-button with a heart icon">
-            <mat-icon>favorite</mat-icon>
-          </button>
-        </p>
-      </as-split-area>
-      <as-split-area>
-          <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eodolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</p>
-      </as-split-area>
-    </as-split>
-  </as-split-area>
   <as-split-area>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae, dolores sequi molestias, hic praesentium magnam eaque ullam odio possimus ad laborum laudantium illo rem totam, iste dolor quasi. Modi, nemo?
+    <div class="content d-flex bd-highlight flex-column">
+      <div class="content-body flex-grow-1">Test</div>
+      <div class="footer-split-div">
+        <button
+          mat-mini-fab
+          color="primary"
+          aria-label="Vertical Split"
+          (click)="splitVertical()"
+        >
+          <mat-icon>pause</mat-icon>
+        </button>
+        &nbsp;
+        <button
+          class="rotate-cw-90"
+          mat-mini-fab
+          color="primary"
+          aria-label="Horizontal split"
+          (click)="splitHorizontal()"
+        >
+          <mat-icon>pause</mat-icon>
+        </button>
+      </div>
+    </div>
+    <!-- <p>
+          <button type="button" class="close" aria-label="Close"></button>
+        </p> -->
   </as-split-area>
 </as-split>
