--- a/webapp/src/app/layout/layout.component.scss
+++ b/webapp/src/app/layout/layout.component.scss
@@ -10,11 +10,55 @@
   // display: flex;
   // flex-direction: column;
   height:100%;
-  overflow: hidden;
+  // overflow: hidden;
+  position: relative;
+}
+.content-body {
+  height: 100%;
+  background-color: #ccc
+}
+// .content-body{
+//   background-image: url('../../assets/images/add-content.png');
+//   background-repeat: no-repeat;
+//   background-attachment: fixed;
+//   background-position: center;
+// }
+.background-img {
+  // position: absolute;
+  // top: 0;
+  // left: 0;
+  // right: 0;
+  // bottom: 0;
+  // min-width: 50%;
+  // min-height: 50%;
+
 }
 
-.content-body{
 
+.text-wrapper {
+  // display: table-cell;
+  // vertical-align: middle;
+  z-index: -2;
+  position: absolute;
+}
+
+.centered {
+  font-family: sans-serif;
+  font-size: 1.3em;
+  font-weight: bold;
+  text-align:center;
+}
+.sampleImg {
+  width: -webkit-fill-available;
+  height:-webkit-fill-available;
+}
+
+.dropzone {
+  display: table;
+  width: 100%;
+  height:100%;
+  // background-color: #eee;
+  // border: dotted 1px #aaa;
 }
 
 .footer-split-div {
@@ -25,6 +69,14 @@
   text-align: center;
   justify-items: center;
   margin-bottom:10px;
-  position:sticky;
+  position: absolute;
   z-index: 1000;
+  // margin-left: 40%;
+  // margin-right: auto;
+  display: flex;
+  justify-content: center;
+  // float: left;
+  clear:both;
+  bottom:0px;
+  width: 100%
 }
