--- a/webapp/src/app/layout/layout.component.html
+++ b/webapp/src/app/layout/layout.component.html
@@ -3,9 +3,11 @@
     <as-split direction="vertical">
       <as-split-area>
         <p>
-          <button mat-mini-fab color="primary" aria-label="Example icon-button with a heart icon">
-            <mat-icon>favorite</mat-icon>
-          </button>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tiam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat. Duis aute irure dolor in
+          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+          pariatur.
         </p>
       </as-split-area>
       <as-split-area>
