--- a/webapp/src/app/layout/layout.component.scss
+++ b/webapp/src/app/layout/layout.component.scss
@@ -52,6 +52,10 @@
   width: -webkit-fill-available;
   height:-webkit-fill-available;
 }
+.sampleVid{
+  width: -webkit-fill-available;
+  height:-webkit-fill-available;
+}
 
 .dropzone {
   display: table;
