--- a/webapp/src/app/admin/admin.component.scss
+++ b/webapp/src/app/admin/admin.component.scss
@@ -2,3 +2,13 @@
 .example-button-row a {
   margin-right: 8px;
 }
+
+.add-btn{
+  right:10px;
+  top:10px;
+  float: right;
+}
+.open-btn{
+  float: right;
+  right:5px;
+}
