--- a/webapp/src/app/layout/layout.component.scss
+++ b/webapp/src/app/layout/layout.component.scss
@@ -49,7 +49,7 @@
   text-align:center;
 }
 .sampleImg {
-  width: -webkit-fill-available;
+  // width: -webkit-fill-available;
   height:-webkit-fill-available;
 }
 .sampleVid{
